<resources>
    <string name="app_name">CrashSnap</string>
    <string name="title_menu1">Selamat Datang di CrashSnap</string>
    <string name="desc_menu1">CrashSnap adalah aplikasi mobile yang memanfaatkan teknologi visi komputer untuk memperkirakan biaya perbaikan mobil setelah kecelakaan. Cukup ambil gambar kerusakan, dan model AI kami akan menganalisis gambar untuk memprediksi biaya perbaikan.</string>
    <string name="title_menu2">Temukan Tindakan yang Tepat untuk Anda</string>
    <string name="desc_menu2">CrashSnap juga menyarankan tindakan yang dilakukan setelah terjadi kecelakaan dan menampilkan bengkel terdekat, untuk membantu Anda membuat keputusan yang tepat setelah insiden.</string>
    <string name="lets_get_started">AYO MULAI</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="name">Nama</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Sudah punya akun.</string>
    <string name="repair_shops_button_text">Bengkel di Sekitar Anda</string>
    <string name="history_button_text">Riwayat Deteksi Kerusakan Mobil</string>
    <string name="tips_button_text">Cara Menggunakan Aplikasi</string>
    <string name="add_story_description">Tambah Cerita</string>
    <string name="result">Hasil</string>
    <string name="description">Deskripsi</string>
    <string name="save_result_button_text">Simpan Hasil</string>
    <string name="history_detail">Detail Riwayat</string>
    <string name="delete_button_text">Hapus Riwayat</string>
    <string name="item_title">Judul Item</string>
    <string name="profile">Profil</string>
    <string name="language">Bahasa</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello!</string>
    <string name="slogan">Just had a crash? Take a snap!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="empty_history">Belum ada riwayat</string>
    <string name="open_gallery">Buka galeri</string>
    <string name="open_camera">Buka kamera</string>
    <string name="permission_success">Izin diberikan</string>
    <string name="permission_err">Izin tidak diberikan</string>
    <string name="no_media">Tidak ada media yang dipilih</string>
    <string name="mapStyle_err">Gagal memuat gaya peta</string>
    <string name="msg_required">Diperlukan</string>
    <string name="see_all">Lihat semua</string>
    <string name="detection_history">Riwayat</string>
    <string name="repair_shop">Bengkel</string>
    <string name="expert_tips">Tips Bermanfaat</string>
    <string name="preview_image">Pratinjau Gambar</string>
    <string name="analyze_button_text">Analisa</string>
    <string name="date" translatable="false">dd/mm/yyyy</string>
    <string name="empty_history2">Anda bisa memulai dengan klik button di kanan bawah</string>
    <string name="history">Riwayat</string>
    <string name="OK">Oke</string>
    <string name="predicted_cost">Prediksi Harga</string>
    <string name="back_home_button_text">Ke beranda</string>
    <string name="headerTips1"><![CDATA[Segera ke Tempat Aman & Hubungi 112]]></string>
    <string name="headerTips2"><![CDATA[Dokumentasikan Segalanya]]></string>
    <string name="headerTips3"><![CDATA[Jangan Akui Kesalahan]]></string>
    <string name="headerTips4"><![CDATA[Dapatkan Perhatian Medis]]></string>
    <string name="headerTips5"><![CDATA[Temukan Bengkel Mobil]]></string>
    <string name="headerTips6"><![CDATA[Hubungi Perusahaan Asuransi Anda]]></string>
    <string name="headerTips7"><![CDATA[Jika ditanggung oleh asuransi Anda, pastikan suku cadang penggantinya baru.]]></string>
    <string name="descTips1">Hal pertama yang harus dilakukan setelah mengalami kecelakaan: Menjauhlah dari lalu lintas lain jika Anda mampu secara fisik. Dari sana, Anda mencari bantuan dan harus menghubungi polisi.</string>
    <string name="descTips2">Pastikan untuk berkomunikasi dengan pengemudi lain dan kumpulkan informasi mereka, termasuk nama, nomor plat, alamat, nomor telepon, dan informasi asuransi. Verifikasi informasi mereka dengan meminta untuk melihat SIM mereka. Ini juga mencakup semua kendaraan yang terlibat dalam kecelakaan dan cedera fisik apa pun.</string>
    <string name="descTips3">Jangan mengakui kesalahan atau menyalahkan orang lain di tempat kejadian. Usahakan ceritakan semuanya secara jujur.  Biarkan polisi menentukan siapa yang salah.</string>
    <string name="descTips4">Bahkan jika Anda tidak melihat cedera segera setelah kecelakaan, dapatkan bantuan medis. Adrenalin dapat menutupi cedera. Jika terdapat luka yang terlihat, segera dapatkan perawatan. Sekalipun Anda merasa baik-baik saja setelah kecelakaan kecil, sebaiknya temui dokter Anda untuk pemeriksaan.</string>
    <string name="descTips5">Baik saat Anda berada di lokasi kecelakaan atau setelah kejadian, Anda dapat memilih bengkel yang Anda rasa nyaman, atau mencari bengkel di sekitar Anda.</string>
    <string name="descTips6">Jika Anda memiliki asuransi, Anda perlu menghubungi perusahaan asuransi Anda untuk memulai klaim. Mereka juga akan dapat memberi Anda gambaran tentang langkah selanjutnya yang harus diambil dan apa yang diharapkan dari proses tersebut</string>
    <string name="descTips7">Polis asuransi Anda akan menentukan apakah suku cadang aftermarket atau OEM dapat digunakan untuk perbaikan kendaraan Anda. Suku cadang aftermarket, yang dibuat oleh pabrikan berbeda, tidak selalu disukai. Jika mobil Anda disewa, polis Anda harus mencakup suku cadang OEM.</string>
    <string name="processed_image">Hasil Gambar</string>
    <string name="full_date" translatable="false">EEEE, d MMMM yyyy</string>
    <string name="damage_detected">Rusak Terdeteksi</string>
    <string name="damages">- Kerusakan</string>
    <string name="estimated_cost">Estimasi Biaya</string>
    <string name="min_cost">Biaya Minimum</string>
    <string name="cost">Rp 100.000</string>
    <string name="max_cost">Biaya Maksimum</string>
    <string name="invalid_token_title">Oh Tidak!</string>
    <string name="invalid_token_msg">Sesi telah berakhir. Silakan masuk kembali.</string>
    <string name="success_deleted">Data dihapus</string>
</resources>