<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.tips.TipsActivity">

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="visible" />

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/topAppBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_chevron_left_24"
        app:title="@string/expert_tips"
        app:titleTextColor="@color/md_theme_primary" />

  </com.google.android.material.appbar.AppBarLayout>

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:padding="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:src="@drawable/image_thinking_face_bro"
          android:layout_marginBottom="16dp"/>

      <TextView
          android:id="@+id/tvHeaderTips1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips1"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips1"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips2"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips2"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips3"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips3"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips4"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips4"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips5"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips5"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips6"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips6"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/tvHeaderTips7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/inter_bold"
          android:text="@string/headerTips7"
          android:textColor="@color/md_theme_primary"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/tvDescTips7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/inter"
          android:text="@string/descTips7"
          android:textSize="16sp" />

    </LinearLayout>
  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>