<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:orientation="vertical">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/redmaroon_normal"/>

</com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/repairShopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_secondary_button"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp"
        android:fontFamily="@font/inter"
        android:text="@string/repair_shops_button_text"
        android:textSize="16sp"
        android:textColor="@color/md_theme_onSecondary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_secondary_button"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp"
        android:fontFamily="@font/inter"
        android:text="@string/history_button_text"
        android:textSize="16sp"
        android:textColor="@color/md_theme_onSecondary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repairShopButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tipsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_secondary_button"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp"
        android:fontFamily="@font/inter"
        android:text="@string/tips_button_text"
        android:textSize="16sp"
        android:textColor="@color/md_theme_onSecondary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/historyButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_story_description"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>